rfswitch (1.3-3) unstable; urgency=low

  * make lintian happy and depend on ${misc:Depends}.
  * switch to dh7.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 23:00:38 +0100

rfswitch (1.3-2) unstable; urgency=low

  * Convert to debhelper + quilt. Bump debhelper dependency to >= 7.
  * Add 01_2.6.26_compat.patch to fix compile against Linux 2.6.26.
  * Add 02_makefile_clean.patch to cleanup new kbuild by-products.

 -- Kel Modderman <kel@otaku42.de>  Tue, 15 Jul 2008 22:19:19 +1000

rfswitch (1.3-1) unstable; urgency=low

  * New upstream release.
  * drop patches, applied upstream.
  * drop dpatch, no longer necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 05 Apr 2008 00:08:16 +0200

rfswitch (1.1-8) unstable; urgency=low

  * appease lintian and write (C) as © in debian/copyright.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 23:47:43 +0100

rfswitch (1.1-7) unstable; urgency=low

  * update to debhelper compat 6.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 01:03:29 +0100

rfswitch (1.1-6) unstable; urgency=low

  * use official Homepage tag.
  * add debian/watch.
  * update to Standards-Version 3.7.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 13:29:31 +0100

rfswitch (1.1-5) unstable; urgency=low

  * add VCS control headers.
  * update syntax for Vcs headers in debian/control

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 19:03:04 +0200

rfswitch (1.1-4) unstable; urgency=low

  * Remove reference to obsolete kernel-image-_KVERS_ in
    debian/control.modules.in.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2007 23:12:48 +0200

rfswitch (1.1-3) unstable; urgency=low

  * fix maintainer mail address.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri,  2 Mar 2007 03:22:35 +0100

rfswitch (1.1-2) unstable; urgency=low

  * fix compilation against kernel 2.6.19.
